2005-12-04  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (set_status), (clear_status),
	(tab_search_key_press_cb), (entry_key_press_event_cb),
	(entry_activate_cb), (set_focus_cb),
	(ephy_find_toolbar_set_window), (ephy_find_toolbar_init),
	(ephy_find_toolbar_class_init), (ephy_find_toolbar_set_embed),
	(ephy_find_toolbar_open), (ephy_find_toolbar_close),
	(ephy_find_toolbar_request_close):
	* src/ephy-find-toolbar.h:
	* src/ephy-window.c: (sync_tab_document_type),
	(find_toolbar_close_cb), (ephy_window_set_print_preview),
	(ephy_window_get_find_toolbar), (ephy_window_get_context_event):

	Refactor find toolbar closing not to crash with auto-closing popups.
	Unset the selection colour on close.
	Remove dead #ifdef FIND_WHILE_TYPING_IN_EMBED code.
	(Merged from HEAD.)

2005-11-27  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-11-27  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.8.3 ===

	* Makefile.am:
	* NEWS:
	* embed/print-dialog.c: (ephy_print_setup_dialog_help_button_cb):
	* src/languages.h:

2005-11-18  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyContentPolicy.cpp:

	Add chrome: and resource: to the safe list; otherwise
	forms and scrollbars break. Fixes bug #316498.

2005-11-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c:

	Delay reloads when we get many change notifications in a short time.
	Fixes bug #319993.

2005-11-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/pdm-dialog.c:

	Set the model's sort column only after filling it. Vastly improves
	delay when opening the PDM dialogue when you have many cookies.

2005-11-15  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/epiphany.glade:
	* data/glade/prefs-dialog.glade:
	* data/glade/print.glade:
	* src/pdm-dialog.c: (pdm_dialog_response_cb), (pdm_dialog_init):
	* src/prefs-dialog.c: (setup_add_language_dialog),
	(prefs_dialog_init):
