@@ -1,3 +1,13 @@
+2005-12-30  Christian Persch  <chpe@cvs.gnome.org>
+
+	* lib/ephy-file-helpers.c: (ephy_file_helpers_init),
+	(my_gdk_spawn_make_environment_for_screen),
+	(make_spawn_environment_for_sn_context),
+	(ephy_file_launch_application), (launch_desktop_item):
+
+	Put a marker in the environment to detect when we launch ourself
+	as a helper app. Fixes bug #324828.
+
 2005-12-04  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-find-toolbar.c: (set_status), (clear_status),
